@@ -133,6 +133,7 @@ private:
         CPPUNIT_TEST( TestSetPath );
         CPPUNIT_TEST( TestStrip );
         CPPUNIT_TEST( TestNormalize );
+        CPPUNIT_TEST( TestRelative );
         CPPUNIT_TEST( TestReplace );
         CPPUNIT_TEST( TestGetHumanReadable );
 #ifdef __WINDOWS__
@@ -158,6 +159,7 @@ private:
     void TestSplit();
     void TestSetPath();
     void TestStrip();
+    void TestRelative();
     void TestNormalize();
     void TestReplace();
     void TestGetHumanReadable();
@@ -439,6 +441,21 @@ void FileNameTestCase::TestNormalize()
     }
     //else: when in doubt, don't run the test
 #endif // __WINDOWS__
+}
+
+void FileNameTestCase::TestRelative()
+{
+    wxFileName fn("a/b.cpp");
+    fn.MakeRelativeTo("a");
+    CPPUNIT_ASSERT_EQUAL( "b.cpp", fn.GetFullPath() );
+
+    fn.AssignDir("a/b");
+    fn.MakeRelativeTo("a");
+    CPPUNIT_ASSERT_EQUAL( "b/", fn.GetFullPath() );
+
+    fn.AssignDir("a");
+    fn.MakeRelativeTo("a");
+    CPPUNIT_ASSERT_EQUAL( "./", fn.GetFullPath() );
 }
 
 void FileNameTestCase::TestReplace()
